crates/next-custom-transforms/tests/errors/react-server-components/client-graph/generate-metadata/input.js
export function generateMetadata() {}

export default function () {
  return null
}
